Fixed overflow handling

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
   background-color: #282c34;
   padding: 0%;
   margin: 0%;
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   border: none;
   scrollbar-color: grey;
 }
